assets/css/screen.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
/* stylelint-disable*/
a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section{display:block}html{line-height:1}body{line-height:inherit}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
/* stylelint-enable */
/* Begin site styles below */
/* 5:6 minor third ratio, 1.2 */
html {
  font-size: 18px; /* Setting base em unit standards */
  line-height: 29px;
  font-family: "Cagliostro", Helvetica, Arial, sans-serif
}
a{
  line-height: 0;
  color:white;
  text-decoration: none;
}
p, ul, ol {
  margin-top: 0em;/* 0px/18px*/
}
a:focus, a:hover{
  color: #560202;
  text-shadow: 0.15em 0.15em #F8A200;/* 2.7px/18px*/
}
body {
  background-color: #F8A200;
  font-size: 0.694em;/* 1 /1.2 = 0.833333 / 1.2*/
  line-height: 1.1188271528em /* 1.611111111 / 1.2 = / 1.2*/
}
h1{
  font-size: 1.222222222em;
  line-height: 1.31818182em;
  margin-top: 0.93548387em;
  margin-bottom: 1.11538462em;
}
h2{
  font-size: 1em;
  line-height: 1.11538462em;/* 16.143px/18px*/
  margin-top: 1.11538462em;/* 16.143px/18px*/
  margin-bottom: 1.11538462em;/* 16.143px/18px*/
}
h3{
  font-size: 0.833333333em; /* 1 / 1.2 */
  line-height: 1.11538462em;
  margin-top: 1.11538462em;
  margin-bottom: 0em;/* 0px/18px*/
}
h4 {
  font-size: 1em;/* 18px/18px*/
  line-height: 1.11538462em;/* 29px/18px*/
  margin-top: 1.11538462em;/* 29px/18px*/
  margin-bottom: 0em;/* 0px/18px*/
}
main {
  max-width: 80%;
  margin: auto;
}
#head{
  font-size: 1.222222em;
  border: 0.1em ridge;
  text-shadow: 0.15em 0.15em black;/* 2.7px/18px*/
  padding-bottom: 1em;/* 16.143px/18px*/
  text-align: center;
  background-color: #F86C00;
  color: white;
  font-family: 'Permanent Marker', cursive, Helvetica,  Arial, sans-serif;
}
#head h1{
  margin-top: 0em;/* 0px/18px*/
  margin-bottom: 0em;/* 0px/18px*/
}
#navigation li{
  display: inline;
  padding: 0em 1em 0em 1em;
}
#cartT {
  margin: 1em 1em 0em 1em;
}
#cartC {
  margin: 0em 1em 1em 1em;
}
.wrapper{
  padding: 0;
  display: grid;
  grid-template-columns:30% 50% 20%;
  background-color: #ffdb96;
  margin: auto;
  margin-bottom: 1.111111em; /* 20/18 =1.11111 */
}
.wrapper p, .wrapper label, .wrapper figure, .wrapper figcaption{
  padding: 0.1111111em; /* 2px/18px */
  margin: auto;
}
.menuImg{
  padding: 1em;
  width: 5em;
}
.locations{
  margin:auto;
  justify-content: center;
}
.menutitles {
  font-size: 0.894em;
  padding-left: 0.894em;
}
@media screen and (min-width: 640px) {

  .menutitles {
    font-size: 1em;
    padding-left: 1em;
  }
  .wrapper {
    grid-template-columns:20% 60% 20%;
  }
}
@media screen and (min-width: 960px) {
  main{
    width: 90%;
  }
  body {
    background-color: #F8A200;
    font-size: 1.2em;/* 18px/18px*/
    line-height: 1.6111111em;/* 29px/18px*/
  }
  h1{
    font-size: 1.7222222em;
    line-height: 1.87096774em;
    margin-top: 0.93548387em;
    margin-bottom: 1.87096774em;
  }
  h2{
    font-size: 1.4444444em;
    line-height: 1.11538462em;/* 16.143px/18px*/
    margin-top: 1.11538462em;/* 16.143px/18px*/
    margin-bottom: 1.11538462em;/* 16.143px/18px*/
  }
  h3{
    font-size: 1.22222222em;
    line-height: 1.31818182em;
    margin-top: 1.31818182em;
    margin-bottom: 0em;/* 0px/18px*/
  }
  h4 {
    font-size: 1em;/* 18px/18px*/
    line-height: 1.6111111em;/* 29px/18px*/
    margin-top: 1.6111111em;/* 29px/18px*/
    margin-bottom: 0em;/* 0px/18px*/
  }
  main {
    max-width: 90%;
    margin: auto;
  }
  #head{
    font-size: 2em;
    border: 0.2em ridge;
    text-shadow: 0.15em 0.15em black;/* 2.7px/18px*/
    padding-bottom: 1.115em;/* 16.143px/18px*/
  }
  #head h1{
    margin-top: 0em;/* 0px/18px*/
    margin-bottom: 0em;/* 0px/18px*/
  }
  #navigation li{
    display: inline;
    padding: 0em 3em 0em 3em;
  }
  .images{
    width: 10em;
    font-size: 1em;/* 18px/18px*/
  }
  .menuImg{
    width: 10em;
  }
  .menutitles {
    font-size: 1.22222222em;
    padding-left: 1em;
  }
}

/* ---FORM CSS---*/
form label, form input{
  float: left;
  margin: auto;
  display: block;
}

